--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,15 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "less"
+          "style": "less",
+          "standalone": true,
+          "skipTests": true,
+          "skipImport": true
+        },
+        "@schematics/angular:pipe": {
+          "standalone": true,
+          "skipTests": true,
+          "skipImport": true
         }
       },
       "root": "",
