--- a/angular.json
+++ b/angular.json
@@ -26,20 +26,20 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/pikus-dev.space",
-            "index": "src/index.html",
-            "main": "src/main.ts",
+            "index": "src/app/root/ui/index.html",
+            "main": "src/app/root/ui/main.ts",
             "polyfills": [
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "less",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "src/shared/assets/images/favicon.ico",
+              "src/shared/assets"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.less"
+              "src/app/root/ui/root.less"
             ],
             "scripts": []
           },
@@ -98,12 +98,12 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "less",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "src/shared/assets/images/favicon.ico",
+              "src/shared/assets"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.less"
+              "src/app/root/ui/root.less"
             ],
             "scripts": []
           }
