--- a/package.json
+++ b/package.json
@@ -35,11 +35,14 @@
     "@angular-eslint/template-parser": "16.2.0",
     "@angular/cli": "~16.2.1",
     "@angular/compiler-cli": "^16.2.0",
+    "@feature-sliced/eslint-config": "^0.1.0-beta.6",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "eslint": "8.22.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-boundaries": "^3.4.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.3",
     "jasmine-core": "~4.6.0",
