--- a/angular.json
+++ b/angular.json
@@ -26,8 +26,8 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/pikus-dev.space",
-            "index": "src/app/root/ui/index.html",
-            "main": "src/app/root/ui/main.ts",
+            "index": "src/app/ui/index.html",
+            "main": "src/app/main.ts",
             "polyfills": [
               "zone.js"
             ],
@@ -39,7 +39,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/app/root/ui/root.less"
+              "src/app/styles/root.less"
             ],
             "scripts": []
           },
@@ -103,7 +103,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/app/root/ui/root.less"
+              "src/app/styles/root.less"
             ],
             "scripts": []
           }
