--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,7 +6,7 @@
     "types": []
   },
   "files": [
-    "src/app/root/ui/main.ts"
+    "src/app/main.ts"
   ],
   "include": [
     "src/**/*.d.ts"
